fixing whitespace

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -121,6 +121,9 @@ color: rgb(180, 180, 180);
 .entry-content{
   max-width: 960px;
   margin: 0 auto;
+  .body {
+    white-space: pre-wrap;
+  }
 }
 
 .entry-date{
